<resources>
    <string name="app_name">MealMate</string>
    <string name="default_web_client_id">229069737713-8arm6la425gt5o9us2p2pktbmvpc1eag.apps.googleusercontent.com</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="login"><u>Login</u></string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="or_login_as">Or, Login as a</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="email_address">Email Address</string>
    <string name="guest"><u>Guest</u></string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="categories">Categories</string>
    <string name="countries">Areas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="hint_search">categories, areas, ingredients</string>
    <string name="motivation_of_the_day">Daily Inspiration</string>
    <string name="hello_name">Hello, %s!</string>
    <string name="ready_to_plan_your_week">Ready to plan \nyour week?</string>
    <string name="ingredient">Ingredients</string>
    <string name="beef_popular_in">%s | Popular</string>
    <string name="title_video">Delicious %s Recipe: Step-by-Step Cooking Guide</string>
    <string name="favorite">favorite</string>
    <string name="instructions">Instructions</string>
    <string name="meal_image">Meal Image</string>
    <string name="country_image">Country Image</string>
    <string name="remove">remove</string>
    <string name="log_out">Log Out</string>
    <string name="your_favorites_is_empty">Your favorites is empty!</string>
    <string name="or_use_social_accounts">Or Use Social Accounts</string>
    <string name="hello_adam">Hello, Adam!</string>
    <string name="ready_to_plan_nyour_week">Ready to plan \nyour week?</string>
    <string name="your_plan_meals_is_empty">Your plan meals is empty!</string>
    <string name="meal">Meal</string>
</resources>