<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/brownish_gray">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/image_gradient"
                android:scaleType="centerCrop"
                android:src="@drawable/background_food" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/image_gradient" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/auth_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".8">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up_email"
                style="@style/ButtonRect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_ripple_rounded_red"
                android:drawableStart="@drawable/ic_mail"
                android:text="@string/sign_up_with_email"
                android:textColor="@color/white"
                app:backgroundTint="@color/reddish_orange" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1" />

                <TextView
                    style="@style/TextStyle_14sp_White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_use_social_accounts" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:drawableStart="@drawable/ic_google"
                android:id="@+id/btn_continue_with_google"
                style="@style/ButtonRect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_ripple_rounded_light_gray"
                android:text="@string/continue_with_google"
                android:textColor="@color/black"
                app:backgroundTint="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:visibility="gone"
                android:drawableStart="@drawable/ic_fb"
                style="@style/ButtonRect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_ripple_rounded_blue"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/white"
                app:backgroundTint="@color/blue" />

            <androidx.appcompat.widget.AppCompatButton
                android:drawableStart="@drawable/ic_prof"
                android:drawableTint="@color/black"
                android:id="@+id/btn_continue_as_guest"
                style="@style/ButtonRect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_ripple_rounded_yellow"
                android:text="@string/continue_as_guest"
                android:textColor="@color/black"
                app:backgroundTint="@color/sunflower_yellow" />

        </LinearLayout>

        <TextView
            android:id="@+id/auth_txt_already_have_account"
            style="@style/TextStyle_14sp_White"
            android:layout_marginTop="40dp"
            android:text="@string/already_have_an_account"
            app:layout_constraintEnd_toStartOf="@id/txt_login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auth_container" />

        <TextView
            android:id="@+id/txt_login"
            style="@style/TextStyle_14sp_White"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/auth_txt_already_have_account"
            app:layout_constraintTop_toBottomOf="@id/auth_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>