<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/brownish_gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hello_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/hello_adam"
            android:textColor="@color/spanish_gray" />

        <TextView
            android:id="@+id/ready_to_plan_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/ready_to_plan_nyour_week"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_day" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            style="@style/RecyclerViewTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/rvPlannedMeals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/item_meal" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_plan"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="top|center_horizontal"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/empty_spirit" />

        <TextView
            android:id="@+id/empty_plan_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:text="@string/your_plan_meals_is_empty"
            android:textColor="@color/spanish_gray"
            android:textSize="16sp"
            />
    </LinearLayout>

</layout>